--- a/module2/santos_mod2_2.html
+++ b/module2/santos_mod2_2.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div id=”container”/>
+	<div id=”container”>
 	<h1>Assignment 2.2 – Building a Web Page Exercise, Part 2</h1>
 	<h2>Chapter 1: About Me</h2>
 	<p class="intro">Hello everyone, my name is Jarred Santos and im from Austin Texas.
