--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<h3>Module Assignments</h3>
 		<ul>
 			<li><a href = "module2/santos_mod2_2.html">2.2</a></li>
-			<li><a href = "module3/santos_mod3_3">3.3</a></li>
+			<li><a href = "module3/santos_mod3_3.html">3.3</a></li>
 		</ul>
 	<h3>Projects</h3>
 		<ul>
