--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<ul>
 			<li><a href = "module2/santos_mod2_2.html">2.2</a></li>
 			<li><a href = "module3/santos_module3_3.html">3.3</a></li>
+			<li><a href = "module4/santos_mod4_2.html">4.2</a></li>
 		</ul>
 	<h3>Projects</h3>
 		<ul>
