--- a/module4/santos_mod4_2.html
+++ b/module4/santos_mod4_2.html
@@ -9,6 +9,7 @@
 		<div id="container">
 		<!--To be centered-->
 		<h1>Assignment 4.2: Build a Web Page Exercise - Part 4</h1>
+		<a href= "../index.html">HOME<a/>
 		<div id="img gallery">
 			<!--img1-->
 			<div id="img1">
