--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</ul>
 	<h3>Projects</h3>
 		<ul>
-			<li><a href="">bioSite Project Home Page</a></li>
+			<li><a href="https://jsrerean.github.io/biosite/">bioSite Project Home Page</a></li>
 		</ul>
 	<h4>Important Links</h4>
 		<ul>
