--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<li><a href = "module4/santos_mod4_2.html">4.2</a></li>
 			<li><a href = "module6/santos_module6.html">6.2</a><li>
 			<li><a href = "module10/santos_module10.html">10.3</a></li>
+			<li><a href = "module11/santos_module11.html">11.2</a></li>
 		</ul>
 	<h3>Projects</h3>
 		<ul>
